[gd_scene load_steps=8 format=3 uid="uid://desjyh17nvcvl"]

[ext_resource type="Script" path="res://Objects/AdminPanelEdits/city_edit.gd" id="1_g7nt8"]
[ext_resource type="StyleBox" uid="uid://cc3y63knchcv3" path="res://Assets/Styles/white_back_blue_borders.tres" id="2_6gn2y"]
[ext_resource type="StyleBox" uid="uid://bv1o2ciq0ndps" path="res://Assets/Styles/white_back_red_borders.tres" id="3_fvisr"]
[ext_resource type="PackedScene" uid="uid://l68yt0p14fpf" path="res://Objects/cool_button.tscn" id="4_5lvxk"]

[sub_resource type="LabelSettings" id="LabelSettings_mx0dn"]
font_size = 64
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pyd5b"]

[sub_resource type="LabelSettings" id="LabelSettings_1vfpl"]
font_size = 32
font_color = Color(0, 0, 0, 1)

[node name="CityEdit" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g7nt8")

[node name="Cities" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="Cities"]
layout_mode = 2
text = "Города"
label_settings = SubResource("LabelSettings_mx0dn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Cities"]
layout_mode = 2
size_flags_vertical = 3

[node name="Options" type="VBoxContainer" parent="Cities/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 25

[node name="Editing" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme_override_constants/separation = 25

[node name="HSeparator" type="HSeparator" parent="Editing"]
layout_mode = 2
theme_override_constants/separation = 50
theme_override_styles/separator = SubResource("StyleBoxEmpty_pyd5b")

[node name="Label" type="Label" parent="Editing"]
layout_mode = 2
text = "Введите отредактированное значение"
label_settings = SubResource("LabelSettings_1vfpl")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Editing"]
layout_mode = 2

[node name="CityNameEdit" type="TextEdit" parent="Editing/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("2_6gn2y")
theme_override_styles/focus = ExtResource("3_fvisr")
wrap_mode = 1
scroll_fit_content_height = true
caret_blink = true

[node name="AreaEdit" type="TextEdit" parent="Editing/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("2_6gn2y")
theme_override_styles/focus = ExtResource("3_fvisr")
wrap_mode = 1
scroll_fit_content_height = true
caret_blink = true

[node name="SubmitChange" parent="Editing" instance=ExtResource("4_5lvxk")]
layout_mode = 2
text = "Изменить"

[node name="HSeparator2" type="HSeparator" parent="Editing"]
layout_mode = 2
theme_override_constants/separation = 50
theme_override_styles/separator = SubResource("StyleBoxEmpty_pyd5b")

[node name="Label3" type="Label" parent="Editing"]
layout_mode = 2
text = "Введите имя и площадь нового города"
label_settings = SubResource("LabelSettings_1vfpl")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="Editing"]
layout_mode = 2

[node name="NewCityName" type="TextEdit" parent="Editing/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("2_6gn2y")
theme_override_styles/focus = ExtResource("3_fvisr")
wrap_mode = 1
scroll_fit_content_height = true
caret_blink = true

[node name="NewCityArea" type="TextEdit" parent="Editing/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("2_6gn2y")
theme_override_styles/focus = ExtResource("3_fvisr")
wrap_mode = 1
scroll_fit_content_height = true
caret_blink = true

[node name="AddNewCity" parent="Editing" instance=ExtResource("4_5lvxk")]
layout_mode = 2
text = "Добавить новое значение"

[node name="HSeparator3" type="HSeparator" parent="Editing"]
layout_mode = 2
theme_override_constants/separation = 50
theme_override_styles/separator = SubResource("StyleBoxEmpty_pyd5b")

[node name="DeleteBtn" parent="Editing" instance=ExtResource("4_5lvxk")]
layout_mode = 2
text = "Удалить город"
